Changelog
=========

This document describes changes between each past release. For information
about future releases, check `milestones`_ and :doc:`/about/vision`.


0.8 (unreleased)
----------------

- Nothing changed yet.


0.7 (2018-10-15)
----------------

- Fix random_unicode py3 compat"


0.6 (2018-06-15)
----------------

- Drop django < 1.11 support
- Add Python 3.x compat and >= 3.5 support


0.5.1 (2018-01-12)
------------------

- Fix json field content handling


0.5 (2018-01-12)
----------------

- Remove django-json
- Drop django 1.8 support


0.4 (2017-11-09)
----------------

- Add Django 1.11 support


0.3 (2017-04-25)
----------------

- Update Django compat to 1.8, 1.9, 1.10


0.2 (2014-08-01)
----------------

Small improvements around UUID format.

- Feature #4 - In ``invitation_required`` decorator, UUID value submitted by
  user is validated via ``TicketAuthenticationForm``. The value stored in
  session also gets more consistent.


0.1.1 (2014-07-10)
------------------

Documentation bugfix.

- Bug #19 - Documentation builds on readthedocs.org (was failing).


0.1 (2014-07-10)
----------------

Initial release.

- Introduced ``Ticket`` model.
- Introduced ``stamp_invitation`` and ``invitation_required`` decorators.


.. rubric:: Notes & references

.. target-notes::

.. _`milestones`: https://github.com/peopledoc/django-ticketoffice/issues/milestones